--- a/BrainPortal/package.json
+++ b/BrainPortal/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
     "@rails/webpacker": "4.3.0",
+    "ag-grid-community": "^25.3.0",
+    "ag-grid-react": "^25.3.0",
     "babel": "^6.23.0",
     "babel-plugin-syntax-jsx": "^6.18.0",
     "formik": "^2.2.6",
     "js-polyfills": "^0.1.43",
     "ramda": "^0.27.1",
     "ramdam": "^1.6.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.3.0",
     "styled-system": "^5.1.5",
